# File_manager

./: LICENSE  README.md  app.py  config.json  file_manager.py  filemanager.config.json  pyproject.toml  utils.py
src/: data.py  file_manager.py  main.py  media_viewer.py  utils.py
src/static/css/: ext.css  mediaviewer.css
src/static/javascript/: ext.js  filemanager.js  filemanager_utils.js  mediaviewer.js  mediaviewer_utils.js
src/templates/: filemanager.html  login.html  mediaviewer.html  settings.html
src/views/: filemanager_route.py  mediaviewer_route.py
static/css/: filemanager.css
static/css/font-awesome/: temp.css
static/javascript/: filemanager_utils.js
templates/: filemanager.html  login.html  mediaviewer.html  settings.html
views/: favicon_route.py  filemanager_route.py  login_route.py  root_route.py  settings_route.py
