[project]
name = "File_manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "alien5516788", email = "93880176+alien5516788@users.noreply.github.com"},
]
dependencies = ["Flask==1.1.2", "Jinja2==2.11.2", "Werkzeug==1.0.1", "MarkupSafe==2.0.1", "itsdangerous==1.1.0", "click==7.1.2", "gunicorn==20.0.4", "certifi==2021.5.30", "wincertstore==0.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python3 src/main.py"
start = "gunicorn -w 4 -b 127.0.0.1:5000 main:app"
